--- a/Worklog.Rmd
+++ b/Worklog.Rmd
@@ -16,3 +16,7 @@ knitr::opts_chunk$set(echo = TRUE)
 # 5/4/2022 - Michael Mila
 
 - Did more data preparation and began data exploration
+
+# 5/5/2022 - Michael Mila
+
+- Added more plots
