--- a/Worklog.Rmd
+++ b/Worklog.Rmd
@@ -8,6 +8,9 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+# 5/1/2022 - Wei Hern Lim
+
+- Imported data.
 
 # 5/2/2022 - Michael Mila
 
@@ -20,3 +23,7 @@ knitr::opts_chunk$set(echo = TRUE)
 # 5/5/2022 - Michael Mila
 
 - Added more plots
+
+# 5/11/2022 - Wei Hern Lim
+
+- Added to data exploration and analysis.
